--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,8 +15,8 @@ SCHEDULER_PORT=3001
 
 DB_TYPE=mysql
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=wish
-DB_USERNAME=root
+DB_USERNAME=wish_user
 DB_PASSWORD=password
